--- a/src/data/site.yml
+++ b/src/data/site.yml
@@ -1,5 +1,5 @@
-intro: Smell the coffee
-title: Surfing
+intro: Haircuts and shaves
+title: Barbershop
 description: description
 author: author
 developer: Developer
