--- a/src/data/site.yml
+++ b/src/data/site.yml
@@ -1,5 +1,6 @@
-intro: Haircuts and shaves
-title: Barbershop
+intro: Jouw haar, jouw stijl, jouw kapper
+title: HairCuts
+category: kapper
 description: description
 author: author
 developer: Developer
