--- a/src/data/site.yml
+++ b/src/data/site.yml
@@ -1,6 +1,6 @@
-intro: Jouw haar, jouw stijl, jouw kapper
-title: HairCuts
-category: kapper
+intro: A cafe and bakery in Heemstede
+title: Oldhand
+category: gallery
 description: description
 author: author
 developer: Developer
