--- a/src/data/site.yml
+++ b/src/data/site.yml
@@ -3,7 +3,7 @@ title: Oldhand
 category: gallery
 description: description
 author: author
-developer: Developer
+developer: Roan Hahn
 keywords: keyword,keyword,keyword
 version: 1.1.1
 type: website
